# ds-init

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: tests.yml
docs/decisions/: 0001-tooling-choices.md
src/ds_init/: __init__.py  cli.py  generators.py  templates.py  utils.py
src/ds_init.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_cli.py  test_generators.py  test_utils.py
